...
                android:textColor="?attr/colorError"
                tools:text="Ошибка" />

        </LinearLayout>

        <TextView
            android:id="@+id/tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textAppearance="?attr/textAppearanceTitleSmall"
            android:textColor="?attr/colorOnSurface"
            tools:text="BackendIdentitySync" />
...
